terraform/modules/vpc/main.tf
resource "aws_vpc" "this" {
  cidr_block           = "10.0.0.0/16"
  enable_dns_support   = true
  enable_dns_hostnames = true

  tags = {
    Name        = "${var.project}-TF-USNV-VPC"
    PROJECT     = var.project
    OWNER       = var.owner
    TERRAFORM   = "TRUE"
  }
}

resource "aws_subnet" "public" {
  vpc_id                  = aws_vpc.this.id
  cidr_block              = "10.0.1.0/24"
  availability_zone       = "us-east-1a"
  map_public_ip_on_launch = true

  tags = {
    Name      = "${var.project}-TF-USNV-PBS-A"
    PROJECT   = var.project
    OWNER     = var.owner
    TERRAFORM = "TRUE"
  }
}

resource "aws_subnet" "private" {
  vpc_id            = aws_vpc.this.id
  cidr_block        = "10.0.2.0/24"
  availability_zone = "us-east-1a"

  tags = {
    Name      = "${var.project}-TF-USNV-PRS-A"
    PROJECT   = var.project
    OWNER     = var.owner
    TERRAFORM = "TRUE"
  }
}

resource "aws_internet_gateway" "this" {
  vpc_id = aws_vpc.this.id

  tags = {
    Name      = "${var.project}-TF-USNV-IGW"
    PROJECT   = var.project
    OWNER     = var.owner
    TERRAFORM = "TRUE"
  }
}

resource "aws_route_table" "public" {
  vpc_id = aws_vpc.this.id

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.this.id
  }

  tags = {
    Name      = "${var.project}-TF-USNV-RT"
    PROJECT   = var.project
    OWNER     = var.owner
    TERRAFORM = "TRUE"
  }
}

resource "aws_route_table_association" "public" {
  subnet_id      = aws_subnet.public.id
  route_table_id = aws_route_table.public.id
}
